@@ -1,5 +1,9 @@
 2024-02-29  Boruch Baum  <boruch_baum@gmx.com>
 
+	* (diredc-shell): Expand ~ in file-names.
+
+2024-02-29  Boruch Baum  <boruch_baum@gmx.com>
+
 	* (diredc-beginning-of-buffer): Fix to advance to first file line.
 
 2024-02-29  Boruch Baum  <boruch_baum@gmx.com>
